--- a/pytest.ini
+++ b/pytest.ini
@@ -1,10 +1,15 @@
+# pytest.ini
 [pytest]
+# Автоматически добавляем флаги при каждом запуске pytest
+addopts = -s -v
+
 python_files = *_tests.py test_*.py
 python_classes = Test*
 python_functions = test_*
+
 markers =
     courses: Маркировка для тестов, связанных с курсами.
-    dashboard: Маркировка для тестов, связанных с рабочей панелью. # Добавили новую маркировку
+    dashboard: Маркировка для тестов, связанных с рабочей панелью.
     regression: Маркировка для регрессионных тестов.
     registration: Маркировка для тестов, связанных с регистрацией пользователей.
     authorization: Маркировка для тестов, связанных с авторизацией пользователей.
