--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_URL="https://nikita-filonov.github.io/qa-automation-engineer-ui-course"
-HEADLESS=false
-BROWSERS=["chromium"]
+HEADLESS=true
+BROWSERS=["chromium","webkit","firefox"]
 
 TEST_USER.EMAIL="user.name@gmail.com"
 TEST_USER.USERNAME="username"
